--- a/index.html
+++ b/index.html
@@ -3,10 +3,58 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>KingCast</title>
+    <title>KingCast Podcast</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f4f4f4;
+            margin: 0;
+            padding: 20px;
+        }
+        h1 {
+            text-align: center;
+            color: #333;
+        }
+        .podcast {
+            background: #fff;
+            padding: 15px;
+            margin: 15px auto;
+            border-radius: 10px;
+            max-width: 600px;
+            box-shadow: 0 2px 8px rgba(0,0,0,0.1);
+        }
+        audio {
+            width: 100%;
+            margin-top: 10px;
+        }
+    </style>
 </head>
 <body>
-    <h1>Bem-vindo ao KingCast!</h1>
-    <p>Meu site está funcionando no Netlify 🎉</p>
+    <h1>🎙️ KingCast Podcast</h1>
+
+    <div class="podcast">
+        <h2>A Eternidade de Deus</h2>
+        <audio controls>
+            <source src="a%20eternidade%20de%20deus.mp3" type="audio/mpeg">
+            Seu navegador não suporta áudio HTML5.
+        </audio>
+    </div>
+
+    <div class="podcast">
+        <h2>A Forma de Deus</h2>
+        <audio controls>
+            <source src="a%20forma%20de%20deus.mp3" type="audio/mpeg">
+            Seu navegador não suporta áudio HTML5.
+        </audio>
+    </div>
+
+    <div class="podcast">
+        <h2>Personalidade de Deus</h2>
+        <audio controls>
+            <source src="personalidade%20de%20deus.mp3" type="audio/mpeg">
+            Seu navegador não suporta áudio HTML5.
+        </audio>
+    </div>
+
 </body>
 </html>
