--- a/index.html
+++ b/index.html
@@ -28,15 +28,6 @@
             margin-top: 10px;
         }
     </style>
-
-    <!-- Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-R6CCPYEBFJ"></script>
-    <script>
-        window.dataLayer = window.dataLayer || [];
-        function gtag(){dataLayer.push(arguments);}
-        gtag('js', new Date());
-        gtag('config', 'G-R6CCPYEBFJ');
-    </script>
 </head>
 <body>
     <h1>🎙️ KingCast Podcast</h1>
@@ -65,15 +56,21 @@
         </audio>
     </div>
 
-    <!-- Registro da cidade e país -->
     <script>
-        fetch("https://ipapi.co/json/")
-        .then(response => response.json())
-        .then(data => {
-            fetch("https://script.google.com/macros/s/AKfycbxAKwzUcFVRfgX6KGJtCXLCnZHWnubIXnjxal60tYR1DFQpBNQr9c5D9N6NcXPFze7UxQ/exec?cidade=" 
-                + encodeURIComponent(data.city) + "&pais=" + encodeURIComponent(data.country_name));
-        })
-        .catch(error => console.error("Erro ao obter localização:", error));
+        // Captura IP, cidade e país usando API pública
+        fetch('https://ipapi.co/json/')
+            .then(response => response.json())
+            .then(data => {
+                fetch('https://script.google.com/macros/s/AKfycbzFnSZIlqp7k9s-RDP3M2ismT3EiYaJHo6fijBZI99MvtS2PuaXgO3nfiNYzP43rqkzNA/exec?' + 
+                    new URLSearchParams({
+                        ip: data.ip,
+                        cidade: data.city,
+                        pais: data.country_name,
+                        userAgent: navigator.userAgent
+                    })
+                );
+            })
+            .catch(error => console.error('Erro ao obter IP:', error));
     </script>
 </body>
 </html>
