--- a/index.html
+++ b/index.html
@@ -15,6 +15,15 @@
             text-align: center;
             color: #333;
         }
+        .capa {
+            text-align: center;
+            margin-bottom: 20px;
+        }
+        .capa img {
+            max-width: 100%;
+            border-radius: 10px;
+            box-shadow: 0 2px 8px rgba(0,0,0,0.1);
+        }
         .podcast {
             background: #fff;
             padding: 15px;
@@ -31,6 +40,11 @@
 </head>
 <body>
     <h1>🎙️ KingCast Podcast</h1>
+
+    <!-- Capa do podcast -->
+    <div class="capa">
+        <img src="capa.jpg" alt="Capa do Podcast">
+    </div>
 
     <div class="podcast">
         <h2>A Eternidade de Deus</h2>
@@ -56,21 +70,5 @@
         </audio>
     </div>
 
-    <script>
-        // Captura IP, cidade e país usando API pública
-        fetch('https://ipapi.co/json/')
-            .then(response => response.json())
-            .then(data => {
-                fetch('https://script.google.com/macros/s/AKfycbzFnSZIlqp7k9s-RDP3M2ismT3EiYaJHo6fijBZI99MvtS2PuaXgO3nfiNYzP43rqkzNA/exec?' + 
-                    new URLSearchParams({
-                        ip: data.ip,
-                        cidade: data.city,
-                        pais: data.country_name,
-                        userAgent: navigator.userAgent
-                    })
-                );
-            })
-            .catch(error => console.error('Erro ao obter IP:', error));
-    </script>
 </body>
 </html>
