--- a/index.html
+++ b/index.html
@@ -37,6 +37,15 @@
             margin-top: 10px;
         }
     </style>
+
+    <!-- Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-R6CCPYEBFJ"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'G-R6CCPYEBFJ');
+    </script>
 </head>
 <body>
     <h1>🎙️ KingCast Podcast</h1>
