--- a/index.html
+++ b/index.html
@@ -15,15 +15,6 @@
             text-align: center;
             color: #333;
         }
-        .capa {
-            text-align: center;
-            margin-bottom: 20px;
-        }
-        .capa img {
-            max-width: 100%;
-            border-radius: 10px;
-            box-shadow: 0 2px 8px rgba(0,0,0,0.1);
-        }
         .podcast {
             background: #fff;
             padding: 15px;
@@ -36,24 +27,20 @@
             width: 100%;
             margin-top: 10px;
         }
+        .capa {
+            display: block;
+            margin: 0 auto 20px auto;
+            max-width: 300px;
+            border-radius: 10px;
+            box-shadow: 0 2px 8px rgba(0,0,0,0.2);
+        }
     </style>
-
-    <!-- Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-R6CCPYEBFJ"></script>
-    <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
-      gtag('js', new Date());
-      gtag('config', 'G-R6CCPYEBFJ');
-    </script>
 </head>
 <body>
     <h1>🎙️ KingCast Podcast</h1>
 
-    <!-- Capa do podcast -->
-    <div class="capa">
-        <img src="capa.jpg" alt="Capa do Podcast">
-    </div>
+    <!-- Capa do Podcast -->
+    <img src="KingCast.jpg" alt="Capa do KingCast Podcast" class="capa">
 
     <div class="podcast">
         <h2>A Eternidade de Deus</h2>
