--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <h1>🎙️ KingCast Podcast</h1>
 
     <!-- Capa do Podcast -->
-    <img src="KingCast.jpg" alt="Capa do KingCast Podcast" class="capa">
+    <img src="kingCast.png" alt="Capa do KingCast Podcast" class="capa">
 
     <div class="podcast">
         <h2>A Eternidade de Deus</h2>
