--- a/index.html
+++ b/index.html
@@ -29,62 +29,49 @@
         }
         .cover {
             display: block;
-            margin: 0 auto 20px auto;
-            max-width: 300px;
+            margin: 0 auto 20px;
+            max-width: 200px;
             border-radius: 10px;
-            box-shadow: 0 2px 8px rgba(0,0,0,0.2);
         }
     </style>
 </head>
 <body>
     <h1>🎙️ KingCast Podcast</h1>
+    <img src="kingCast.png" alt="Capa do Podcast KingCast" class="cover">
 
-    <img src="kingCast.png" alt="Capa do Podcast" class="cover">
-
-    <div class="podcast">
-        <h2>A Eternidade de Deus</h2>
-        <audio controls>
-            <source src="a%20eternidade%20de%20deus.mp3" type="audio/mpeg">
-            Seu navegador não suporta áudio HTML5.
-        </audio>
-    </div>
-
-    <div class="podcast">
-        <h2>A Forma de Deus</h2>
-        <audio controls>
-            <source src="a%20forma%20de%20deus.mp3" type="audio/mpeg">
-            Seu navegador não suporta áudio HTML5.
-        </audio>
-    </div>
-
-    <div class="podcast">
-        <h2>Personalidade de Deus</h2>
-        <audio controls>
-            <source src="personalidade%20de%20deus.mp3" type="audio/mpeg">
-            Seu navegador não suporta áudio HTML5.
-        </audio>
-    </div>
+    <div id="podcast-list">Carregando episódios...</div>
 
     <script>
-        // URL do seu Apps Script
-        const scriptURL = "https://script.google.com/macros/s/AKfycbx6yqm4LL3e31ESKHL7DVUnCncy6ynfvIinI85UGtTrIVEnFVPVqJkxEPzuwixYGg9S2w/exec";
+        const repoOwner = "jhoelrodriguespodcast";
+        const repoName = "kingcast";
 
-        function registrarVisita(ip, cidade, pais) {
-            const nav = navigator.userAgent || '';
-            const url = scriptURL + 
-                '?ip=' + encodeURIComponent(ip) + 
-                '&cidade=' + encodeURIComponent(cidade) + 
-                '&pais=' + encodeURIComponent(pais) + 
-                '&navegador=' + encodeURIComponent(nav);
+        fetch(`https://api.github.com/repos/${repoOwner}/${repoName}/contents/`)
+            .then(response => response.json())
+            .then(files => {
+                const podcastList = document.getElementById("podcast-list");
+                podcastList.innerHTML = "";
 
-            fetch(url).catch(console.error);
-        }
+                files.forEach(file => {
+                    if (file.name.toLowerCase().endsWith(".mp3")) {
+                        const title = decodeURIComponent(file.name.replace(".mp3", "").replace(/%20/g, " "));
 
-        // Busca IP/cidade/país e envia
-        fetch('https://ipapi.co/json/')
-            .then(r => r.json())
-            .then(d => registrarVisita(d.ip, d.city, d.country_name))
-            .catch(() => registrarVisita('','', ''));
+                        const div = document.createElement("div");
+                        div.classList.add("podcast");
+                        div.innerHTML = `
+                            <h2>${title}</h2>
+                            <audio controls>
+                                <source src="${file.download_url}" type="audio/mpeg">
+                                Seu navegador não suporta áudio HTML5.
+                            </audio>
+                        `;
+                        podcastList.appendChild(div);
+                    }
+                });
+            })
+            .catch(err => {
+                document.getElementById("podcast-list").innerHTML = "Erro ao carregar episódios.";
+                console.error(err);
+            });
     </script>
 </body>
 </html>
