--- a/index.html
+++ b/index.html
@@ -33,6 +33,11 @@
             max-width: 200px;
             border-radius: 10px;
         }
+        .date {
+            font-size: 0.9em;
+            color: gray;
+            margin-bottom: 5px;
+        }
     </style>
 </head>
 <body>
@@ -45,33 +50,52 @@
         const repoOwner = "jhoelrodriguespodcast";
         const repoName = "kingcast";
 
-        fetch(`https://api.github.com/repos/${repoOwner}/${repoName}/contents/`)
-            .then(response => response.json())
-            .then(files => {
-                const podcastList = document.getElementById("podcast-list");
-                podcastList.innerHTML = "";
+        async function fetchFiles() {
+            const response = await fetch(`https://api.github.com/repos/${repoOwner}/${repoName}/contents/`);
+            const files = await response.json();
 
-                files.forEach(file => {
-                    if (file.name.toLowerCase().endsWith(".mp3")) {
-                        const title = decodeURIComponent(file.name.replace(".mp3", "").replace(/%20/g, " "));
+            let episodes = [];
 
-                        const div = document.createElement("div");
-                        div.classList.add("podcast");
-                        div.innerHTML = `
-                            <h2>${title}</h2>
-                            <audio controls>
-                                <source src="${file.download_url}" type="audio/mpeg">
-                                Seu navegador não suporta áudio HTML5.
-                            </audio>
-                        `;
-                        podcastList.appendChild(div);
-                    }
-                });
-            })
-            .catch(err => {
-                document.getElementById("podcast-list").innerHTML = "Erro ao carregar episódios.";
-                console.error(err);
+            for (let file of files) {
+                if (file.name.toLowerCase().endsWith(".mp3")) {
+                    // Busca a data do último commit para esse arquivo
+                    const commitRes = await fetch(`https://api.github.com/repos/${repoOwner}/${repoName}/commits?path=${file.path}&per_page=1`);
+                    const commitData = await commitRes.json();
+                    const date = new Date(commitData[0].commit.committer.date);
+
+                    episodes.push({
+                        title: decodeURIComponent(file.name.replace(".mp3", "").replace(/%20/g, " ")),
+                        url: file.download_url,
+                        date: date
+                    });
+                }
+            }
+
+            // Ordena do mais novo para o mais antigo
+            episodes.sort((a, b) => b.date - a.date);
+
+            const podcastList = document.getElementById("podcast-list");
+            podcastList.innerHTML = "";
+
+            episodes.forEach(ep => {
+                const div = document.createElement("div");
+                div.classList.add("podcast");
+                div.innerHTML = `
+                    <div class="date">${ep.date.toLocaleString("pt-BR")}</div>
+                    <h2>${ep.title}</h2>
+                    <audio controls>
+                        <source src="${ep.url}" type="audio/mpeg">
+                        Seu navegador não suporta áudio HTML5.
+                    </audio>
+                `;
+                podcastList.appendChild(div);
             });
+        }
+
+        fetchFiles().catch(err => {
+            document.getElementById("podcast-list").innerHTML = "Erro ao carregar episódios.";
+            console.error(err);
+        });
     </script>
 </body>
 </html>
