--- a/index.html
+++ b/index.html
@@ -47,7 +47,13 @@
             Seu navegador não suporta áudio HTML5.
         </audio>
     </div>
-
+<div class="podcast">
+        <h2>O poder de Deus</h2>
+        <audio controls>
+            <source src="a%20eternidade%20de%20deus.mp3" type="audio/mpeg">
+            Seu navegador não suporta áudio HTML5.
+        </audio>
+    </div>
     <div class="podcast">
         <h2>A Forma de Deus</h2>
         <audio controls>
