--- a/index.html
+++ b/index.html
@@ -1,30 +1,88 @@
-function doGet(e) {
-  try {
-    // Abra sua planilha pelo ID
-    var ss = SpreadsheetApp.openById('19bu1iLfR3sNvrlpBnNiG71c9iwq6J0izpZf4Ag8iOP0');
+<!DOCTYPE html>
+<html lang="pt-BR">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>KingCast Podcast</title>
+  <style>
+    body { font-family: Arial, sans-serif; background-color: #f4f4f4; margin: 0; padding: 20px; }
+    h1 { text-align: center; color: #333; }
+    .podcast { background: #fff; padding: 15px; margin: 15px auto; border-radius: 10px; max-width: 600px; box-shadow: 0 2px 8px rgba(0,0,0,0.1); }
+    audio { width: 100%; margin-top: 10px; }
+    .cover { display: block; margin: 0 auto 10px; max-width: 100%; border-radius: 10px; }
+  </style>
+</head>
+<body>
+  <h1>🎙️ KingCast Podcast</h1>
+  <img src="kingCast.png" alt="Capa do Podcast" class="cover">
 
-    // Troque o nome da aba se for diferente. Se não existir, usa a primeira.
-    var sheet = ss.getSheetByName('Página1');
-    if (!sheet) sheet = ss.getSheets()[0];
+  <div id="episodes"></div>
 
-    // Garante que e.parameter exista (evita erro ao rodar pelo menu "Executar")
-    var p = (e && e.parameter) ? e.parameter : {};
+  <script>
+    const repoOwner = "jhoelrodriguespodcast";
+    const repoName = "kingcast";
 
-    var data = new Date();
-    var ip = p.ip || '';
-    var cidade = p.cidade || '';
-    var pais = p.pais || '';
-    var navegador = p.navegador || '';
+    async function loadEpisodes() {
+      try {
+        // Pega lista de arquivos do repositório
+        const res = await fetch(`https://api.github.com/repos/${repoOwner}/${repoName}/contents`);
+        const files = await res.json();
 
-    sheet.appendRow([data, ip, cidade, pais, navegador]);
+        // Filtra apenas arquivos .mp3
+        const mp3Files = files.filter(file => file.name.toLowerCase().endsWith('.mp3'));
 
-    return ContentService
-      .createTextOutput('OK')
-      .setMimeType(ContentService.MimeType.TEXT);
+        // Pega datas de commit para cada arquivo
+        const filesWithDate = await Promise.all(mp3Files.map(async file => {
+          const commitRes = await fetch(`https://api.github.com/repos/${repoOwner}/${repoName}/commits?path=${file.path}&per_page=1`);
+          const commitData = await commitRes.json();
+          const date = new Date(commitData[0].commit.committer.date);
+          return { ...file, date };
+        }));
 
-  } catch (err) {
-    return ContentService
-      .createTextOutput('ERRO: ' + err.message)
-      .setMimeType(ContentService.MimeType.TEXT);
-  }
-}
+        // Ordena por data (mais recente primeiro)
+        filesWithDate.sort((a, b) => b.date - a.date);
+
+        // Monta HTML
+        const container = document.getElementById("episodes");
+        filesWithDate.forEach(file => {
+          const div = document.createElement("div");
+          div.className = "podcast";
+          div.innerHTML = `
+            <h2>${file.name.replace(/\.mp3$/i, '')}</h2>
+            <audio controls>
+              <source src="${file.download_url}" type="audio/mpeg">
+              Seu navegador não suporta áudio HTML5.
+            </audio>
+          `;
+          container.appendChild(div);
+        });
+
+      } catch (err) {
+        console.error("Erro ao carregar episódios:", err);
+      }
+    }
+
+    loadEpisodes();
+
+    // Registro automático na planilha
+    fetch('https://ipapi.co/json/')
+      .then(response => response.json())
+      .then(data => {
+        const ip = data.ip || '';
+        const cidade = data.city || '';
+        const pais = data.country_name || '';
+        const navegador = navigator.userAgent || '';
+
+        fetch('https://script.google.com/macros/s/AKfycbyYbTICoPfv2gIyrJvNtID5PF3XH0a4SSo7FCjcOWV0sh2XiMB938yKKDEzFbO5mi6VtQ/exec'
+          + '?ip=' + encodeURIComponent(ip)
+          + '&cidade=' + encodeURIComponent(cidade)
+          + '&pais=' + encodeURIComponent(pais)
+          + '&navegador=' + encodeURIComponent(navegador)
+        )
+        .then(() => console.log('Visitante registrado com sucesso!'))
+        .catch(err => console.error('Erro ao enviar dados:', err));
+      })
+      .catch(err => console.error('Erro ao obter IP/localização:', err));
+  </script>
+</body>
+</html>
