--- a/index.html
+++ b/index.html
@@ -7,9 +7,10 @@
   <style>
     body { font-family: Arial, sans-serif; background-color: #f4f4f4; margin: 0; padding: 20px; }
     h1 { text-align: center; color: #333; }
+    h2 { margin-top: 30px; color: #444; }
     .podcast { background: #fff; padding: 15px; margin: 15px auto; border-radius: 10px; max-width: 600px; box-shadow: 0 2px 8px rgba(0,0,0,0.1); }
     audio { width: 100%; margin-top: 10px; }
-    .cover { display: block; margin: 0 auto 10px; max-width: 100%; border-radius: 10px; }
+    .cover { display: block; margin: 0 auto 20px; max-width: 200px; border-radius: 10px; }
   </style>
 </head>
 <body>
@@ -22,49 +23,43 @@
     const repoOwner = "jhoelrodriguespodcast";
     const repoName = "kingcast";
 
+    // Defina aqui os temas/pastas
+    const temas = ["deus", "reflexoes", "historia"];
+
     async function loadEpisodes() {
-      try {
-        const res = await fetch(`https://api.github.com/repos/${repoOwner}/${repoName}/contents`);
-        const files = await res.json();
+      const container = document.getElementById("episodes");
 
-        const mp3Files = files.filter(file => file.name.toLowerCase().endsWith('.mp3'));
+      for (const tema of temas) {
+        try {
+          // Busca os arquivos dentro da pasta do tema
+          const res = await fetch(`https://api.github.com/repos/${repoOwner}/${repoName}/contents/${tema}`);
+          const files = await res.json();
 
-        const filesWithDate = await Promise.all(mp3Files.map(async file => {
-          const commitRes = await fetch(`https://api.github.com/repos/${repoOwner}/${repoName}/commits?path=${file.path}&per_page=1`);
-          const commitData = await commitRes.json();
-          const date = new Date(commitData[0].commit.committer.date);
-          return { ...file, date };
-        }));
+          // Filtra apenas mp3
+          const mp3Files = files.filter(file => file.name.toLowerCase().endsWith('.mp3'));
 
-        filesWithDate.sort((a, b) => b.date - a.date);
+          if (mp3Files.length > 0) {
+            // Cria título da seção
+            const title = document.createElement("h2");
+            title.textContent = tema.charAt(0).toUpperCase() + tema.slice(1);
+            container.appendChild(title);
 
-        const container = document.getElementById("episodes");
-        filesWithDate.forEach((file, index) => {
-          const div = document.createElement("div");
-          div.className = "podcast";
-          div.innerHTML = `
-            <h2>${file.name.replace(/\.mp3$/i, '')}</h2>
-            <audio controls id="audio-${index}">
-              <source src="${file.download_url}" type="audio/mpeg">
-              Seu navegador não suporta áudio HTML5.
-            </audio>
-          `;
-          container.appendChild(div);
-        });
-
-        // adiciona autoplay em sequência
-        const audios = document.querySelectorAll("audio");
-        audios.forEach((audio, i) => {
-          audio.addEventListener("ended", () => {
-            if (i + 1 < audios.length) {
-              audios[i + 1].play();
-              window.scrollTo({ top: audios[i + 1].parentElement.offsetTop - 20, behavior: 'smooth' });
+            for (const file of mp3Files) {
+              const div = document.createElement("div");
+              div.className = "podcast";
+              div.innerHTML = `
+                <h3>${file.name.replace(/\.mp3$/i, '')}</h3>
+                <audio controls>
+                  <source src="${file.download_url}" type="audio/mpeg">
+                  Seu navegador não suporta áudio HTML5.
+                </audio>
+              `;
+              container.appendChild(div);
             }
-          });
-        });
-
-      } catch (err) {
-        console.error("Erro ao carregar episódios:", err);
+          }
+        } catch (err) {
+          console.error("Erro ao carregar episódios de", tema, err);
+        }
       }
     }
 
