--- a/index.html
+++ b/index.html
@@ -1,72 +1,148 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>KingCast Podcast</title>
-  <style>
-    body { font-family: Arial, sans-serif; background-color: #f4f4f4; margin: 0; padding: 20px; }
-    h1 { text-align: center; color: #333; }
-    h2 { color: #444; margin-top: 30px; }
-    .podcast { background: #fff; padding: 15px; margin: 15px auto; border-radius: 10px; max-width: 600px; box-shadow: 0 2px 8px rgba(0,0,0,0.1); }
-    audio { width: 100%; margin-top: 5px; }
-    .cover { display: block; margin: 0 auto 10px; max-width: 100%; border-radius: 10px; }
-  </style>
+<meta charset="utf-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1" />
+<title>KingCast Podcast</title>
+<style>
+  body{font-family:Arial, sans-serif;background:#f5f6f8;margin:0;padding:20px}
+  h1{margin:0 0 20px;text-align:center}
+  .cover{display:block;margin:0 auto 16px;max-width:240px;border-radius:12px}
+  .container{max-width:900px;margin:0 auto}
+  .folder{background:#fff;border-radius:12px;box-shadow:0 4px 16px rgba(0,0,0,.06);margin:12px 0;overflow:hidden}
+  .folder-header{display:flex;align-items:center;justify-content:space-between;gap:12px;padding:14px 16px;cursor:pointer}
+  .folder-header:hover{background:#fafafa}
+  .folder-title{font-weight:700}
+  .chevron{transition:transform .2s ease}
+  .folder.open .chevron{transform:rotate(90deg)}
+  .folder-body{display:none;border-top:1px solid #eee;padding:8px 12px 14px}
+  .folder.open .folder-body{display:block}
+  .podcast{background:#fff;border:1px solid #eee;border-radius:10px;padding:12px;margin:10px 0}
+  .podcast h3{margin:0 0 6px;font-size:16px}
+  audio{width:100%}
+  .muted{color:#666;font-size:12px}
+</style>
 </head>
 <body>
-  <h1>🎙️ KingCast Podcast</h1>
-  <img src="kingCast.png" alt="Capa do Podcast" class="cover">
+  <div class="container">
+    <h1>🎙️ KingCast Podcast</h1>
+    <img src="kingCast.png" alt="Capa do Podcast" class="cover" />
 
-  <div id="episodes"></div>
+    <p class="muted">Clique em um tema para ver/ocultar os áudios.</p>
+    <div id="folders"></div>
+  </div>
 
-  <script>
-    const repoOwner = "jhoelrodriguespodcast";
-    const repoName = "kingcast";
+<script>
+const repoOwner = "jhoelrodriguespodcast";
+const repoName  = "kingcast";
 
-    async function loadEpisodes() {
-      try {
-        const res = await fetch(`https://api.github.com/repos/${repoOwner}/${repoName}/contents`);
-        const items = await res.json();
+async function listRoot() {
+  const res = await fetch(`https://api.github.com/repos/${repoOwner}/${repoName}/contents`);
+  if (!res.ok) throw new Error("Não foi possível listar o repositório.");
+  return res.json();
+}
 
-        // Filtra apenas pastas
-        const folders = items.filter(item => item.type === "dir");
+async function listFolder(folderUrl){
+  const res = await fetch(folderUrl);
+  if (!res.ok) throw new Error("Não foi possível listar a pasta.");
+  return res.json();
+}
 
-        const container = document.getElementById("episodes");
+function niceTitle(filename){
+  return filename.replace(/\.mp3$/i,'').replace(/[_\-]+/g,' ').trim();
+}
 
-        // Para cada pasta (tema)
-        for (const folder of folders) {
-          // Pega arquivos dentro da pasta
-          const resFolder = await fetch(folder.url);
-          const files = await resFolder.json();
+function createFolderCard(folder){
+  const card = document.createElement('div');
+  card.className = 'folder';
+  card.dataset.loaded = 'false';
 
-          const mp3Files = files.filter(f => f.name.toLowerCase().endsWith(".mp3"));
-          if (mp3Files.length === 0) continue; // pula se não tiver áudio
+  card.innerHTML = `
+    <div class="folder-header">
+      <div class="folder-title">📂 ${folder.name}</div>
+      <div class="chevron">▶</div>
+    </div>
+    <div class="folder-body">
+      <div class="muted">Carregando áudios…</div>
+    </div>
+  `;
 
-          // Cria seção com título da pasta
-          const section = document.createElement("div");
-          section.innerHTML = `<h2>📂 ${folder.name}</h2>`;
-          container.appendChild(section);
+  const header = card.querySelector('.folder-header');
+  const body   = card.querySelector('.folder-body');
 
-          // Lista áudios
-          mp3Files.forEach(file => {
-            const div = document.createElement("div");
-            div.className = "podcast";
+  header.addEventListener('click', async () => {
+    // alterna visual
+    const isOpen = card.classList.toggle('open');
+
+    // se abriu agora e ainda não carregou, busca os mp3
+    if (isOpen && card.dataset.loaded === 'false') {
+      try{
+        const files = await listFolder(folder.url);
+        const mp3s  = files.filter(f => f.type === 'file' && f.name.toLowerCase().endsWith('.mp3'));
+
+        if (mp3s.length === 0) {
+          body.innerHTML = `<div class="muted">Nenhum áudio encontrado neste tema.</div>`;
+        } else {
+          // (opcional) ordenar por nome; se quiser por data de commit, dá pra buscar os commits aqui
+          mp3s.sort((a,b) => a.name.localeCompare(b.name, 'pt-BR', {numeric:true}));
+
+          const frag = document.createDocumentFragment();
+          mp3s.forEach(file => {
+            const div = document.createElement('div');
+            div.className = 'podcast';
             div.innerHTML = `
-              <h3>${file.name.replace(/\.mp3$/i, '')}</h3>
-              <audio controls>
+              <h3>${niceTitle(file.name)}</h3>
+              <audio controls preload="none">
                 <source src="${file.download_url}" type="audio/mpeg">
                 Seu navegador não suporta áudio HTML5.
               </audio>
             `;
-            section.appendChild(div);
+            frag.appendChild(div);
           });
+          body.innerHTML = '';
+          body.appendChild(frag);
         }
-      } catch (err) {
-        console.error("Erro ao carregar episódios:", err);
+        card.dataset.loaded = 'true';
+      }catch(e){
+        body.innerHTML = `<div class="muted">Erro ao carregar: ${e.message}</div>`;
       }
     }
+  });
 
-    loadEpisodes();
-  </script>
+  return card;
+}
+
+(async function init(){
+  try{
+    const rootItems = await listRoot();
+
+    // pega apenas pastas (temas). se quiser listar também MP3 soltos fora de pastas, dá pra tratar aqui.
+    const folders = rootItems.filter(i => i.type === 'dir');
+
+    const container = document.getElementById('folders');
+
+    // opcional: garantir que "Deus" apareça primeiro
+    folders.sort((a,b) => {
+      if (a.name.toLowerCase() === 'deus') return -1;
+      if (b.name.toLowerCase() === 'deus') return 1;
+      return a.name.localeCompare(b.name, 'pt-BR', {numeric:true});
+    });
+
+    if (folders.length === 0){
+      container.innerHTML = `<div class="muted">Nenhum tema/pasta encontrado.</div>`;
+      return;
+    }
+
+    folders.forEach(f => container.appendChild(createFolderCard(f)));
+
+    // Se quiser que a pasta "Deus" já apareça aberta na primeira carga:
+    // const deusCard = [...container.querySelectorAll('.folder')].find(c => c.querySelector('.folder-title')?.textContent.toLowerCase().includes('deus'));
+    // if (deusCard) deusCard.querySelector('.folder-header').click();
+
+  }catch(err){
+    document.getElementById('folders').innerHTML = `<div class="muted">Erro: ${err.message}</div>`;
+  }
+})();
+</script>
 </body>
 </html>
